Add location data caveats to app UI
